--- a/dubbo-admin-backend/src/main/resources/application.properties
+++ b/dubbo-admin-backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+dubbo.registry.address=multicast://224.5.6.7:1234
 
 server.port=7001
 spring.velocity.cache=false
