--- a/dubbo-admin-backend/src/main/resources/application.properties
+++ b/dubbo-admin-backend/src/main/resources/application.properties
@@ -16,6 +16,7 @@
 #
 
 dubbo.registry.address=multicast://224.5.6.7:1234
+dubbo.registry.group=dubbo
 
 server.port=7001
 spring.velocity.cache=false
